argocd/cluster-resources/apps/monitoring/templates/netpols/monitoring.ftl.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-required-access-to-grafana
  namespace: ${namespace}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              prometheus: kube-prometheus-stack-prometheus
      ports:
        - protocol: TCP
          port: grafana
<#if config.features.ingress.active == true>
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "${config.application.namePrefix}${config.features.ingress.namespace}"
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: grafana
</#if>
<#if config.application.openshift == true>
    - from:
        - namespaceSelector:
            matchLabels:
              policy-group.network.openshift.io/ingress: ""
      ports:
        - protocol: TCP
          port: grafana
</#if>
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-required-access-to-prometheus
  namespace: ${namespace}
spec:
  podSelector:
    matchLabels:
      prometheus: kube-prometheus-stack-prometheus
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
      ports:
        - protocol: TCP
          port: http-web
    - from:
        - podSelector:
            matchLabels:
              prometheus: kube-prometheus-stack-prometheus
      ports:
        - protocol: TCP
          port: http-web
        - protocol: TCP
          port: reloader-web
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-required-access-to-prometheus-operator
  namespace: ${namespace}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              prometheus: kube-prometheus-stack-prometheus
      ports:
        - protocol: TCP
          port: http
