argocd/cluster-resources/apps/monitoring/templates/netpols/prometheus-allow-scraping.ftl.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scraping
  namespace: ${namespace}
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "${namePrefix}monitoring"
          podSelector:
            matchLabels:
              prometheus: kube-prometheus-stack-prometheus
<#if config.jenkins.active == true && config.jenkins.internal == true && namespace == jenkinsNamespace>
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-required-access-to-jenkins
  namespace: ${namespace}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: jenkins-controller
      app.kubernetes.io/instance: jenkins
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              jenkins/jenkins-jenkins-agent: "true"
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 50000
<#if config.features.ingress.active == true>
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "${namePrefix}${config.features.ingress.namespace}"
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8080
</#if>
<#list config.application.networkPolicies.bootstrapCidrs as bootstrapCidr>
    - from:
        - ipBlock:
            cidr: ${bootstrapCidr}
      ports:
        - protocol: TCP
          port: 8080
</#list>
</#if>
